--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,6 +21,7 @@
     "joi": "^17.9.1",
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.0.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
