--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ lerna-debug.log*
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /node_modules
 /.env
-
+*.package-lock.json
 # Runtime data
 pids
 *.pid
