--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express-session": "^1.17.3",
     "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
+    "mocha": "^10.2.0",
     "mongoose": "^7.0.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.5.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "should": "^13.2.3",
+    "supertest": "^6.3.3"
   }
 }
